RESOLVED FIXED314364
[MSE|Cocoa] Power Regression while watching Netflix when a decompression session is in use.
https://bugs.webkit.org/show_bug.cgi?id=314364
Summary [MSE|Cocoa] Power Regression while watching Netflix when a decompression sess...
Jean-Yves Avenard [:jya]
Reported 2026-05-07 19:32:58 PDT
Studies show that when the MediaSourcePrefersDecompressionSession is set and the Netflix stream started with non-protected content. We have a higher power usage (about 140mW extra) ; compare traces show that the difference could be attributed to how the VideoMediaSampleRenderer is only decoding one frame at a time while when a AVSBDL is in use: decoding occurs by burst. At a glance it appears that the handling of the low watermark is broken
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-07 19:33:06 PDT
Jean-Yves Avenard [:jya]
Comment 2 2026-05-07 22:18:55 PDT
EWS
Comment 3 2026-05-08 03:42:18 PDT
Committed 312870@main (88ab9766f984): <https://commits.webkit.org/312870@main> Reviewed commits have been landed. Closing PR #64522 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.